# clang-blueprint

./: .clang-format  .clang-tidy  .gitignore  .travis.yml  CMakeLists.txt  README.md
cmake/: clang_tools.cmake  cppcheck.cmake  unit_test.cmake
docs/: Doxyfile
include/fact/: factorial.h
src/: main.cpp
src/danger/: bad_examples.cpp
src/fact/: factorial.cpp
test/danger/: test_bad_examples.cpp
test/fact/: test_factorial.cpp
